tests/ui/sync_cell_owner.stderr
error[E0277]: the trait bound `Family: SendThreadSafeFamily` is not satisfied
 --> tests/ui/sync_cell_owner.rs:9:5
  |
9 |     std::thread::spawn(|| {
  |     ^^^^^^^^^^^^^^^^^^ the trait `SendThreadSafeFamily` is not implemented for `Family`
  |
  = note: required because of the requirements on the impl of `Send` for `cell_family::CellOwner<Family>`
  = note: 1 redundant requirement hidden
  = note: required because of the requirements on the impl of `Send` for `&mut cell_family::CellOwner<Family>`
  = note: required because it appears within the type `[closure@$DIR/tests/ui/sync_cell_owner.rs:9:24: 14:6]`
note: required by a bound in `spawn`
